# black-magic-org

./: .buildinfo  .gitignore  CNAME  README.md  blog.html  conf.py  firmware-installation.md  genindex.html  getting-started.html  getting-started.md  hardware.html  hardware.md  index.html  index.md  objects.inv  pyproject.toml  requirements.txt  run_livereload.py  search.html  searchindex.js  supported-targets.html  supported-targets.md  upgrade.html  upgrade.md
.doctrees/: environment.pickle  getting-started.doctree  hardware.doctree  index.doctree  supported-targets.doctree  upgrade.doctree
_assets/: bmp_demo.cast
_pinouts/: .gitignore  generate.py
_sources/: upgrade.md.txt
_templates/: version.html
blog/: 2022-01-07-new-maintainer.html  2022-01-07-new-maintainer.md  2022-01-20-organization-rename.html  2022-01-20-organization-rename.md  2022-05-30-release-v1_8_0.html  2022-05-30-release-v1_8_0.md  2022-07-13-release-v1_8_1.html  2022-07-13-release-v1_8_1.md  2022-07-21-release-v1_8_2.html  2022-07-21-release-v1_8_2.md  2022-11-27-release-candidate-v1_9_0-rc0.html  2022-11-27-release-candidate-v1_9_0-rc0.md  2022-12-31-release-candidate-v1_9_0-rc1.html  2022-12-31-release-candidate-v1_9_0-rc1.md  2022.html  2023-01-27-release-v1_9_0.html  2023-01-27-release-v1_9_0.md  2023-04-28-release-v1_9_1.html  2023-04-28-release-v1_9_1.md  2023-09-16-release-v1_8_3.html  2023-09-16-release-v1_8_3.md  2023-09-16-release-v1_9_2.html  2023-09-16-release-v1_9_2.md  2023-09-17-release-candidate-v1_10_0-rc0.html  2023-09-17-release-candidate-v1_10_0-rc0.md  2023-10-11-release-candidate-v1_10_0-rc1.html  2023-10-11-release-candidate-v1_10_0-rc1.md  2023-10-28-release-v1_10_0.html  2023-10-28-release-v1_10_0.md  (+24 more)
(+146 files in other folders)
