[project]
name = "black-magic-org"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ablog @ git+https://github.com/ABD-01/ablog_with_furo",
    "cairosvg>=2.8.2",
    "furo>=2025.9.25",
    "livereload>=2.7.1",
    "myst-parser>=4.0.1",
    "pinout>=0.0.20",
    "setuptools>=80.9.0",
    "sphinx>=8.2.3",
    "sphinx-favicon>=1.0.1",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinxcontrib-asciinema @ git+https://github.com/esden/sphinxcontrib.asciinema@wip",
    "sphinxcontrib-youtube>=1.4.1",
    "sphinxext-opengraph>=0.13.0",
]

